# PAIM

./: .gitignore  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  pyproject.toml  vercel.json
backend/application/: client_handler.py  product_handler.py  requests.py  responses.py
backend/application/address/: address_repository.py
backend/application/auth/: auth.py  auth_service.py
backend/application/client/: client_repository.py  client_service.py
backend/application/order/: order_repository.py  order_service.py
backend/application/product/: product_repository.py  product_service.py
backend/application/truck/: truck_repository.py
backend/application/warehouse/: warehouse_repository.py
backend/auth/: auth_handler.py
backend/domain/: address.py  admin.py  client.py  entities.py  exceptions.py  order.py  product.py  product_order.py  truck.py  warehouse.py
backend/domain/client/: model.py  services.py
backend/domain/product/: model.py  services.py
backend/infrastructure/: containers.py
backend/infrastructure/api/: exception_handler.py  main.py
backend/infrastructure/api/endpoints/: admin.py  admin_router.py  auth_router.py  client_router.py  order_router.py  (+1 more)
backend/infrastructure/client/: client_repository.py
backend/infrastructure/mongo/: address_repository.py  client_repository.py  mongo_client.py  order_repository.py  product_repository.py  truck_repository.py  warehouse_repository.py
backend/infrastructure/product/: product_repository.py
backend/tests/: test_client.py  test_order.py  test_product.py
(+81 files in other folders)
